--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
 .home {
   width: 100%;
   align-items: center;
-  font-family: "Arial", sans-serif;
   color: #3e497a;
 }
 
@@ -18,8 +22,7 @@
 }
 
 .about h2 {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 80px;
+  font-size: 60px;
   color: #e9d35b;
   height: 50px;
 }
@@ -29,7 +32,7 @@
   font-size: 30px;
 }
 .prompt svg {
-  font-size: 60px;
+  font-size: 40px;
   margin: 5px;
   color: white;
 }
@@ -45,6 +48,10 @@
 
 .skills h1 {
   color: #3e497a;
+}
+
+.skills h2 {
+  font-size: 40px;
 }
 
 .skills .list {
@@ -77,4 +84,35 @@
   .skills h2 {
     font-size: 30px;
   }
+
+  .skills-front {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+  }
+
+  .skills-front p{
+    font-size: 20px;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+.skills-front {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+
+.skills-front > div {
+  margin: 10px;
+}
+
+.skills-front p{
+  font-size: 30px;
 }
