--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -8,21 +8,18 @@
 }
 
 .project h1 {
-  margin-top: 50px;
+  /* margin-top: 10px; */
   color: #3e497a;
-  font-size: 35px;
+  font-size: 30px;
 }
 .project img {
-  width: 700px;
+  width: 500px;
   border-radius: 10px;
+  object-fit: contain;
 }
 
 .project p {
-  font-size: 40px;
+  font-size: 16px;
   color: #3e497a;
 }
 
-.project svg {
-  font-size: 60px;
-  color: #3e497a;
-}
