--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,7 +17,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #21325e;
+  background-color: #050a17;
   color: #f0f0f0;
 }
 
